compiler/weave_syntax/tests/data/syntax/IncompleteNamespace5.error
error: unexpected token ';', expected '{'
        --> <source>:1:13
         |
       1 | namespace X ;
         |             ^
hint: unexpected semicolon
        --> <source>:1:13
         |
       1 | namespace X ;
         |             ^
error: unexpected token '[token::end-of-file]', expected '}'
        --> <source>:2:1
         |
       2 | 
         | ^
